--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,49 @@
             android:layout_height="match_parent"
             tools:context=".presentation.main.MainActivity">
 
+        <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:gravity="center"
+        >
+            <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:gravity="center"
+            >
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="피파온라인4 전적 검색"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:layout_centerInParent="true"
+                />
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
         <EditText
                 android:id="@+id/editNickName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 app:layout_constraintTop_toTopOf="parent"
+                android:drawableStart="@drawable/custom_input_icon"
+                android:background="@drawable/custom_input"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
                 app:layout_constraintBottom_toTopOf="@+id/txtNickName"
+                android:drawablePadding="12dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                android:inputType="text"
         />
 
         <TextView
@@ -40,10 +75,11 @@
 
         </TextView>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="검색"
                 app:layout_constraintTop_toBottomOf="@+id/txtLevel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
