--- a/app/src/main/res/layout/match_result.xml
+++ b/app/src/main/res/layout/match_result.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+>
     <data>
         <variable name="matchModel" type="kevin.android.fifaonline.model.MatchDTO"/>
 
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="6dp"
     >
 
         <TextView
                 android:id="@+id/txtPlayer1"
                 android:text="@{matchModel.matchInfo.get(0).nickname}"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:paddingStart="20dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:paddingTop="5dp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
         />
@@ -29,11 +29,12 @@
                 android:id="@+id/txtPlayerResult1"
                 android:text="@{matchModel.matchInfo.get(0).matchDetail.matchResult}"
                 android:textStyle="bold"
-                android:textSize="25sp"
-                android:padding="12dp"
+                android:textSize="16sp"
+                android:paddingTop="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtPlayer1"
                 app:layout_constraintBottom_toBottomOf="parent"
         />
@@ -41,26 +42,25 @@
         <TextView
                 android:id="@+id/txtVs"
                 android:text="VS"
-                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="15dp"
+                android:paddingTop="5dp"
+                android:layout_marginStart="20dp"
                 app:layout_constraintStart_toEndOf="@+id/txtPlayerResult1"
                 app:layout_constraintEnd_toStartOf="@+id/txtPlayer2"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingTop="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
                 android:id="@+id/txtPlayer2"
                 android:text="@{matchModel.matchInfo.get(1).nickname}"
-                android:textSize="20sp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:textSize="14sp"
+                android:paddingTop="5dp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:paddingStart="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtVs"
                 app:layout_constraintBottom_toBottomOf="parent"
         />
@@ -69,25 +69,25 @@
                 android:id="@+id/txtPlayerResult2"
                 android:text="@{matchModel.matchInfo.get(1).matchDetail.matchResult}"
                 android:textStyle="bold"
-                android:textSize="25sp"
-                android:padding="12dp"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingTop="5dp"
+                android:layout_marginStart="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtPlayer2"
                 app:layout_constraintBottom_toBottomOf="parent"
         />
-        <!--      helelelslslsldldldldldldllddldldllddlssldlsldlsldls          -->
         <TextView
                 android:id="@+id/txtPlayerScore1"
                 android:text="@{Integer.toString(matchModel.matchInfo.get(0).shoot.goalTotal)}"
                 android:textSize="20sp"
-                android:padding="10dp"
-                android:paddingStart="40dp"
+                android:paddingTop="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="15dp"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtPlayerResult2"
                 app:layout_constraintBottom_toBottomOf="parent"
         />
@@ -96,12 +96,13 @@
                 android:id="@+id/txtColon"
                 android:text=":"
                 android:textSize="20sp"
-                android:padding="8dp"
+                android:paddingTop="5dp"
                 android:textColor="@color/black"
+                app:layout_constraintTop_toTopOf="parent"
                 android:textStyle="bold"
+                android:layout_marginStart="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtPlayerScore1"
                 app:layout_constraintBottom_toBottomOf="parent"
         />
@@ -110,13 +111,28 @@
                 android:id="@+id/txtPlayerScore2"
                 android:text="@{Integer.toString(matchModel.matchInfo.get(1).shoot.goalTotal)}"
                 android:textSize="20sp"
-                android:padding="10dp"
+                android:paddingTop="5dp"
+                android:layout_marginStart="5dp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtColon"
                 app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+        <TextView
+                android:id="@+id/txtMatchDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/txtPlayer1"
+                app:layout_constraintStart_toStartOf="@+id/txtPlayer1"
+                app:layout_constraintBottom_toTopOf="@+id/viewLine"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="15dp"
+                android:text="@{matchModel.matchDate}"
+                android:textSize="11sp"
         />
 
         <View
@@ -124,12 +140,10 @@
                 android:layout_width="0dp"
                 android:background="@color/black"
                 android:layout_height="2dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtPlayer2"
-        />
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteY="70dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
