--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
             tools:context=".presentation.main.MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,49 +42,63 @@
                 android:id="@+id/editNickName"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:drawableStart="@drawable/custom_input_icon"
                 android:background="@drawable/custom_input"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                app:layout_constraintBottom_toTopOf="@+id/txtNickName"
                 android:drawablePadding="12dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:inputType="text"
-        />
-
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@+id/appbar" android:layout_marginTop="92dp"/>
         <TextView
                 android:id="@+id/txtNickName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{model.nickname}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="40dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/editNickName"/>
         <TextView
                 android:id="@+id/txtLevel"
-                app:layout_constraintTop_toBottomOf="@+id/txtNickName"
+                app:layout_constraintTop_toBottomOf="@id/txtNickName"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:text="@{Integer.toString(model.level)}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
+        </TextView>
+        <TextView
+                android:id="@+id/txtMaxDivision"
+                app:layout_constraintTop_toBottomOf="@id/txtLevel"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:text="역대 최고 등급!"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
         </TextView>
 
         <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnSearch"
+                android:id="@+id/btnMatchSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="검색"
+                android:text="전적 검색"
                 app:layout_constraintTop_toBottomOf="@+id/txtLevel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.441"/>
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnUserSearch"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="유저 정보 검색"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/btnMatchSearch"
+                app:layout_constraintEnd_toEndOf="parent"
         />
 
 
